fix(table): change thead to sticky position with z-index (#5887)
* fix(table): change thead to sticky position with z-index

This change makes `thead` stick to the top of the table container and ensures the elements in `thead` are visible as the table body is scrolled.

* fix(data-table): remove padding as we switch to sticky position

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -474,7 +474,6 @@
   // -------------
   .#{$prefix}--data-table_inner-container {
     background-color: $ui-03;
-    padding-top: rem(48px);
     transform: translateZ(0);
   }
 
@@ -492,7 +491,8 @@
     }
 
     thead {
-      position: fixed;
+      position: sticky;
+      z-index: 1;
       top: 0;
       width: 100%;
       overflow: scroll;
